Reduce code in getAllProducts